tempfile/impl-trait-for-tuples/tests/ui/unknown_separator.stderr
error: expected one of: `,`, `+`, `-`, `|`, `&`, `*`, `/`
  --> tests/ui/unknown_separator.rs:12:41
   |
12 |         for_tuples!( ( #( Tuple.test() )$* ) )
   |                                         ^
